--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,3 +1,16 @@
 plugins:
   - rubocop-rspec
   - rubocop-rake
+
+AllCops:
+  TargetRubyVersion: 3.2
+  NewCops: enable
+  SuggestExtensions: true
+  DisplayCopNames: true
+  ExtraDetails: true
+  Color: true
+  FormatStyleGuide: true
+
+  # Disable Lint/ConstantDefinitionInBlock
+  Lint/ConstantDefinitionInBlock:
+    Enabled: false
